refactor(kitchenpos - controller): testFixture 활용