@@ -3,9 +3,11 @@ package kitchenpos.ui;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import kitchenpos.application.MenuService;
 import kitchenpos.domain.Menu;
-import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Product;
+import kitchenpos.testfixture.MenuProductTestFixture;
+import kitchenpos.testfixture.MenuTestFixture;
+import kitchenpos.testfixture.ProductTestFixture;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -15,7 +17,7 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
-import java.util.UUID;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
@@ -36,35 +38,14 @@ class MenuRestControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-
     @Test
     void create() throws Exception {
 
         //given
-        MenuGroup menuGroup = new MenuGroup();
-        menuGroup.setId(UUID.randomUUID());
-        menuGroup.setName("치킨류");
-
-        Product product = new Product();
-        product.setId(UUID.randomUUID());
-        product.setName("후라이드");
-        product.setPrice(BigDecimal.valueOf(10000));
-
-        MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setProduct(product);
-        menuProduct.setQuantity(2);
-
-
-        Menu request = new Menu();
-        request.setName("후라이드+후라이드");
-        request.setPrice(BigDecimal.valueOf(19000));
-        request.setMenuGroupId(menuGroup.getId());
-        request.setDisplayed(true);
-        request.setMenuProducts(Arrays.asList(menuProduct));
-
-        Menu response = new Menu();
-        response.setName(request.getName());
-        response.setId(UUID.randomUUID());
+        Product product = ProductTestFixture.createProduct("후라이드치킨", 10000L);
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        Menu request = MenuTestFixture.createMenuRequest("후라이드+후라이드", 19000L, true, List.of(menuProduct));
+        Menu response = MenuTestFixture.createMenu("후라이드+후라이드", 19000L, true, List.of(menuProduct));
 
         given(menuService.create(any()))
                 .willReturn(response);
@@ -85,25 +66,22 @@ class MenuRestControllerTest {
     void changePrice() throws Exception {
 
         //given
-        UUID menuId = UUID.randomUUID();
-        Menu request = new Menu();
-        request.setPrice(BigDecimal.valueOf(15000));
-
-        Menu response = new Menu();
-        response.setId(menuId);
-        response.setPrice(request.getPrice());
+        Product product = ProductTestFixture.createProduct("감자튀김", 15000L);
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        Menu menu = MenuTestFixture.createMenu("감자튀김", 15000L, true, List.of(menuProduct));
+        Menu response = MenuTestFixture.createMenu("감자튀김", 14000L, true, List.of(menuProduct));
 
         given(menuService.changePrice(any(), any()))
                 .willReturn(response);
+        menu.setPrice(BigDecimal.valueOf(14000));
 
         //when then
-        mockMvc.perform(put("/api/menus/{menuId}/price", menuId)
+        mockMvc.perform(put("/api/menus/{menuId}/price", menu.getId())
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                        .content(objectMapper.writeValueAsString(menu)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.price").value(response.getPrice()));
-
 
     }
 
@@ -111,52 +89,46 @@ class MenuRestControllerTest {
     void display() throws Exception {
 
         //given
-        UUID menuId = UUID.randomUUID();
-        Menu response = new Menu();
-        response.setId(menuId);
-        response.setDisplayed(false);
-
+        Menu menu = MenuTestFixture.createMenu("감자튀김", 15000L, false, List.of(new MenuProduct()));
+        Menu response = MenuTestFixture.createMenu("감자튀김", 15000L, true, List.of(new MenuProduct()));
 
         given(menuService.display(any()))
                 .willReturn(response);
 
         //when then
-        mockMvc.perform(put("/api/menus/{menuId}/display", menuId)
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andDo(print())
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.displayed").value(false));
-    }
-
-    @Test
-    void hide() throws Exception {
-        UUID menuId = UUID.randomUUID();
-        Menu response = new Menu();
-        response.setId(menuId);
-        response.setDisplayed(true);
-
-
-        given(menuService.display(any()))
-                .willReturn(response);
-
-        //when then
-        mockMvc.perform(put("/api/menus/{menuId}/display", menuId)
+        mockMvc.perform(put("/api/menus/{menuId}/display",  menu.getId())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.displayed").value(true));
+
+    }
+
+    @Test
+    void hide() throws Exception {
+
+        //given
+        Menu menu = MenuTestFixture.createMenu("감자튀김", 15000L, true, List.of(new MenuProduct()));
+        Menu response = MenuTestFixture.createMenu("감자튀김", 15000L, false, List.of(new MenuProduct()));
+
+        given(menuService.hide(any()))
+                .willReturn(response);
+
+        //when then
+        mockMvc.perform(put("/api/menus/{menuId}/hide", menu.getId())
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.displayed").value(false));
+
     }
 
     @Test
     void findAll() throws Exception {
 
         //given
-        Menu menu1 = new Menu();
-        menu1.setId(UUID.randomUUID());
-        menu1.setName("menu1");
-        Menu menu2 = new Menu();
-        menu2.setId(UUID.randomUUID());
-        menu2.setName("menu2");
+        Menu menu1 = MenuTestFixture.createMenu("후라이드치킨", 17000L, true, List.of(new MenuProduct()));
+        Menu menu2 = MenuTestFixture.createMenu("감자튀김", 15000L, true, List.of(new MenuProduct()));
 
         given(menuService.findAll())
                 .willReturn(Arrays.asList(menu1, menu2));
@@ -170,5 +142,6 @@ class MenuRestControllerTest {
                 .andExpect(jsonPath("$[0].name").value(menu1.getName()))
                 .andExpect(jsonPath("$[1].id").value(menu2.getId().toString()))
                 .andExpect(jsonPath("$[1].name").value(menu2.getName()));
+
     }
 }
